tweaks;tweaks;tweaks;tweaks;

--- a/index.html
+++ b/index.html
@@ -4,11 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Véronique Auriac, psychologue clinicienne et sexothérapeute à Aucamville (31). Thérapies pour adultes et adolescents.">
+    <meta name="keywords" content="psychologue, clinicienne, sexothérapeute, Aucamville, Toulouse, thérapie, adultes, adolescents, burn out, dépression, anxiété, phobies, stress post-traumatique, deuil, addictions, TCC, psychodynamique">
     <title>Véronique Auriac - Psychologue Clinicienne & Sexothérapeute</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Véronique Auriac - Psychologue Clinicienne & Sexothérapeute",
+      "description": "Véronique Auriac, psychologue clinicienne et sexothérapeute à Aucamville (31). Thérapies pour adultes et adolescents.",
+      "url": "https://www.votre-site.fr",
+      "telephone": "+33670831679",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Espace médical Villaret, 85 route de Fronton",
+        "addressLocality": "Aucamville",
+        "postalCode": "31140",
+        "addressRegion": "Occitanie",
+        "addressCountry": "FR"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+          ],
+          "opens": "09:00",
+          "closes": "19:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Saturday"
+          ],
+          "opens": "10:00",
+          "closes": "17:00",
+          "description": "Deux Samedis par mois"
+        }
+      ],
+      "hasMap": "https://www.google.com/maps/search/Espace+médical+Villaret,+85+route+de+Fronton,+31140+Aucamville"
+    }
+    </script>
 </head>
 <body>
 
@@ -30,7 +74,7 @@
         <section id="apropos">
             <svg class="section-deco-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
             <h2>À propos de moi</h2>
-            <img src="photo.jpeg" alt="Portrait de Véronique Auriac" class="profile-photo">
+            <img src="photo.jpeg" alt="Portrait de Véronique Auriac, psychologue clinicienne et sexothérapeute à Aucamville" class="profile-photo">
             <p>
                 Psychologue clinicienne diplômée d'état en psychologie clinique, psychopathologie et psychologie de la santé (2020), je suis aussi spécialisée en sexothérapie (2023), psycho-criminologie et victimologie (2018).
             </p>
@@ -106,8 +150,13 @@
             <svg class="section-deco-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
             <h2>Contact</h2>
             <p><strong>Adresse du cabinet :</strong> Espace médical Villaret, 85 route de Fronton, 31140 Aucamville</p>
+            <p><strong>Horaires d'ouverture :</strong></p>
+            <ul>
+                <li>Lundi - Vendredi : 9h00 - 19h00</li>
+                <li>Deux Samedis par mois : 10h00 - 17h00</li>
+            </ul>
             <p><strong>Téléconsultation :</strong> Disponible pour les patients déjà suivis.</p>
-            <p>Pour prendre rendez-vous, veuillez me contacter par <a href="https://www.doctolib.fr/psychologue/aucamville/veronique-auriac" target="_blank">Doctolib</a>.</p>
+            <p>Pour prendre rendez-vous, veuillez me contacter via <a href="https://www.doctolib.fr/psychologue/aucamville/veronique-auriac" target="_blank">Doctolib</a> ou par téléphone au <a href="tel:+33670831679">06.70.83.16.79</a>.</p>
         </section>
     </main>
 
