Add hamburger button.

--- a/index.html
+++ b/index.html
@@ -62,12 +62,17 @@
     </header>
 
     <nav>
-        <a href="#apropos">À propos</a>
-        <a href="#interventions">Domaines d'intervention</a>
-        <a href="#tarifs">Tarifs</a>
-        <a href="#experience">Expérience</a>
-        <a href="#formation">Formation</a>
-        <a href="#contact">Contact</a>
+        <button class="hamburger" aria-label="Ouvrir le menu de navigation">
+            <span class="hamburger-icon"></span>
+        </button>
+        <div class="nav-links" id="nav-links">
+            <a href="#apropos">À propos</a>
+            <a href="#interventions">Domaines d'intervention</a>
+            <a href="#tarifs">Tarifs</a>
+            <a href="#experience">Expérience</a>
+            <a href="#formation">Formation</a>
+            <a href="#contact">Contact</a>
+        </div>
     </nav>
 
     <main>
@@ -165,6 +170,8 @@
     </footer>
 
     
+
+<script src="script.js"></script>
 
 </body>
 </html>
