--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
     </header>
 
     <nav>
-        <button class="hamburger" aria-label="Ouvrir le menu de navigation">
-            <span class="hamburger-icon"></span>
-        </button>
+        
         <div class="nav-links" id="nav-links">
             <a href="#apropos">À propos</a>
             <a href="#interventions">Domaines d'intervention</a>
@@ -89,13 +87,15 @@
             <p>
                 Dans ma pratique, j'allie deux approches : la psychodynamique et la thérapie cognitive et comportementale (TCC). Cela me permet d'ajuster et d'adapter mon accompagnement thérapeutique au plus près de la demande et des besoins du patient.
             </p>
-            
+            <div style="text-align: center; margin-top: 2rem;">
+                <a href="https://www.doctolib.fr/psychologue/aucamville/veronique-auriac" target="_blank" class="cta-button">Prendre rendez-vous</a>
+            </div>
         </section>
 
         <section id="interventions">
             <svg class="section-deco-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg>
             <h2>Domaines d'intervention</h2>
-            <ul>
+                        <ul>
                 <li>Burn out</li>
                 <li>Harcèlement professionnel ou scolaire</li>
                 <li>Dépression</li>
